guides/v2.0/frontend-dev-guide/bk-frontend-dev-guide.md
---
layout: default
group: fedg
title: Frontend Developer Guide
landing-page: Frontend Developer Guide
menu_title: Introduction
menu_order: 1
version: 2.0
github_link: frontend-dev-guide/bk-frontend-dev-guide.md
redirect_from: /guides/v1.0/frontend-dev-guide/bk-frontend-dev-guide.html
functional_areas:
  - Frontend
---

<h2 id="overview-introduction">Introduction</h2>
This document provides instructions for creating and installing custom {% glossarytooltip 1a70d3ac-6bd9-475a-8937-5f80ca785c14 %}storefront{% endglossarytooltip %} themes for a Magento application. It describes Magento's content rendering process and explains the view layer of the system to the extent required to build a {% glossarytooltip d2093e4a-2b71-48a3-99b7-b32af7158019 %}theme{% endglossarytooltip %} efficiently. The document also walks through everyday {% glossarytooltip b00459e5-a793-44dd-98d5-852ab33fc344 %}frontend{% endglossarytooltip %} developer's tasks.

Developing the view part of a custom {% glossarytooltip c1e4242b-1f1a-44c3-9d72-1d5b1435e142 %}module{% endglossarytooltip %} and customizing the {% glossarytooltip 18b930cf-09cc-47c9-a5e5-905f86c43f81 %}Magento Admin{% endglossarytooltip %} panel design is out of the scope of this guide.

Frontend developers can use this guide to create custom themes to tailor the Magento storefront for a specific customer.

<p>You can apply these levels of customization to your site, where the levels require different development skills:</p>
<ul>
<li><p>You can make relatively simple changes to your site using cascading style sheets (CSS) to change colors and the look-and-feel of various interface components, replacing images, and other relatively cosmetic changes.</p>
<p>No structural changes are made to pages&mdash;you accept the structure of the site provided by default by modules you load on to your site.</p>
<p>This can be a good starting point for a site as it is requires the least effort and knowledge.</p></li>
<li><p>A small step beyond changing {% glossarytooltip 6c5cb4e9-9197-46f2-ba79-6147d9bfe66d %}CSS{% endglossarytooltip %} and images on your site is to make changes to the {% glossarytooltip a2aff425-07dd-4bd6-9671-29b7edefa871 %}HTML{% endglossarytooltip %} generated by existing modules.</p>
<p>This requires rudimentary {% glossarytooltip bf703ab1-ca4b-48f9-b2b7-16a81fd46e02 %}PHP{% endglossarytooltip %} skills to adjust {% glossarytooltip ae0f1f68-c466-4189-88fd-6cd8b23c804f %}PHTML{% endglossarytooltip %} template files.</p>
<p>Although PHP coding is involved, this is typically copying and pasting small fragments of PHP code from existing template files into a new template file with differently structured HTML.</p>
<p>This can be useful if the existing HTML generated does not have sufficient CSS class names or HTML elements to achieve the presentation change you would like to achieve.</p></li>
<li><p>The next level of sophistication is to make structural changes to your site by moving functionality between places on a page or to completely different pages.</p>
<p>This is achieved using the Magento {% glossarytooltip 73ab5daa-5857-4039-97df-11269b626134 %}layout{% endglossarytooltip %} engine.  No PHP coding is required to make layout changes, but the layout engine is moderately sophisticated.</p></li>
<li><p>Finally, you can develop new modules to add new custom functionality to your site or to extend functionality provided by existing Magento or third party modules.</p>
<p>This third level of customization is not addressed in this guide.</p>
<p>See the Developers' Guide for details on how to develop new modules.</p>
<p>This requires PHP programming knowledge in addition to knowledge of all of the preceding areas.</p></li>
</ul>

<div class="bs-callout bs-callout-info" id="info">
<p>There have been some inquiries about the status of the Visual Design Editor (VDE), which is currently part of the Magento development code base. The VDE enables assigning and unassigning themes, editing theme CSS and JS files, changing page layouts, and managing blocks and their positions on pages in a {% glossarytooltip 98cf4fd5-59b6-4610-9c1f-b84c8c0abd97 %}WYSIWYG{% endglossarytooltip %} mode. We'd like to clarify that to meet higher priority objectives, the VDE will <em>not</em> be part of the initial Magento release. Future plans for the VDE will be communicated at a later point in time. You are welcome to continue to provide input on the VDE, but please note that we will not be actively reviewing or actioning these comments in the near term.</p>
</div>

<h2 id="fedg-prereqs">Frontend development prerequisites</h2>

To implement what is discussed in this guide, you need a working Magento installation and the following browser versions installed on your device:

{% include browsers/supported-browsers.md %}

To use this guide, you must be familiar with:

*	CSS and CSS 3
*	HTML and HTML 5
*	{% glossarytooltip 8c0645c5-aa6b-4a52-8266-5659a8b9d079 %}XML{% endglossarytooltip %}
*	{% glossarytooltip 312b4baf-15f7-4968-944e-c814d53de218 %}JavaScript{% endglossarytooltip %}
*	Responsive Web Design (RWD)

#### Related topics:

*	<a href="{{ page.baseurl }}frontend-dev-guide/themes/theme-general.html">Themes</a>
*	<a href="{{ page.baseurl }}frontend-dev-guide/css-topics/theme-ui-lib.html">Magento UI library</a>
*	<a href="{{ page.baseurl }}frontend-dev-guide/css-topics/css-overview.html">Cascading style sheets (CSS) </a>
*	<a href="{{ page.baseurl }}coding-standards/code-standard-javascript.html">JavaScript coding standard</a>
*	<a href="{{ page.baseurl }}frontend-dev-guide/responsive-web-design/rwd_overview.html">Responsive web design</a>
*	[Translations]({{ page.baseurl }}frontend-dev-guide/translations/xlate.html)

