guides/v2.2/frontend-dev-guide/bk-frontend-dev-guide.md
---
group: frontend-developer-guide
title: Frontend Developer Guide
landing-page: Frontend Developer Guide
functional_areas:
  - Frontend
---

## Introduction {#overview-introduction}

This document provides instructions for creating and installing custom [storefront](https://glossary.magento.com/storefront) themes for a Magento application. It describes Magento's content rendering process and explains the view layer of the system to the extent required to build a [theme](https://glossary.magento.com/theme) efficiently. The document also walks through everyday [frontend](https://glossary.magento.com/frontend) developer's tasks.

Developing the view part of a custom [module](https://glossary.magento.com/module) and customizing the [Magento Admin](https://glossary.magento.com/magento-admin) panel design is out of the scope of this guide.

Frontend developers can use this guide to create custom themes to tailor the Magento storefront for a specific customer.

You can apply these levels of customization to your site, where the levels require different development skills:

*  You can make relatively simple changes to your site using cascading style sheets (CSS) to change colors and the look-and-feel of various interface components, replacing images, and other relatively cosmetic changes. For more advanced styling, familiarity with LESS (Leaner Style Sheets) and XML (Extensible Markup Language) is helpful.

    No structural changes are made to pages—you accept the structure of the site provided by default by modules you load on to your site.

    This can be a good starting point for a site as it requires the least effort and knowledge.

*  A small step beyond changing [CSS](https://glossary.magento.com/css) and images on your site is to make changes to the [HTML](https://glossary.magento.com/html) generated by existing modules.

    This requires rudimentary [PHP](https://glossary.magento.com/php) skills to adjust [PHTML](https://glossary.magento.com/phtml) template files.

    Although PHP coding is involved, this is typically copying and pasting small fragments of PHP code from existing template files into a new template file with differently structured HTML.

    This can be useful if the existing HTML generated does not have sufficient CSS class names or HTML elements to achieve the presentation change you would like to achieve.

*  The next level of sophistication is to make structural changes to your site by moving functionality between places on a page or to completely different pages.

    This is achieved using the Magento [layout](https://glossary.magento.com/layout) engine. No PHP coding is required to make layout changes, but the layout engine is moderately sophisticated.

*  Finally, you can develop new modules to add new custom functionality to your site or to extend the functionality provided by existing Magento or third party modules.

    This third level of customization is not addressed in this guide.

    See the Developer Guide for details on how to develop new modules.

    This requires PHP programming knowledge in addition to knowledge of all of the preceding areas.

{:.bs-callout .bs-callout-info}
There have been some inquiries about the status of the Visual Design Editor (VDE), which is currently part of the Magento development code base. The VDE enables assigning and unassigning themes, editing theme CSS and JS files, changing page layouts, and managing blocks and their positions on pages in a [WYSIWYG](https://glossary.magento.com/wysiwyg) mode. We'd like to clarify that to meet higher priority objectives, the VDE will _not_ be part of the initial Magento release. Future plans for the VDE will be communicated at a later point in time. You are welcome to continue to provide input on the VDE, but please note that we will not be actively reviewing or actioning these comments in the near term.

## Frontend development prerequisites {#fedg-prereqs}

To implement what is discussed in this guide, you need a working Magento installation and the following browser versions installed on your device:

{% include browsers/supported-browsers.md %}

To use this guide, you must be familiar with:

*  CSS, CSS 3, and LESS
*  HTML and HTML 5
*  [XML](https://glossary.magento.com/xml)
*  [JavaScript](https://glossary.magento.com/javascript)
*  PHTML, PHP (Basic)
*  Responsive Web Design (RWD)

{:.ref-header}
Related topics

*  [Themes]({{ page.baseurl }}/frontend-dev-guide/themes/theme-general.html)
*  [Magento UI library]({{ page.baseurl }}/frontend-dev-guide/css-topics/theme-ui-lib.html)
*  [Cascading style sheets (CSS)]({{ page.baseurl }}/frontend-dev-guide/css-topics/css-overview.html)
*  [JavaScript coding standard]({{ page.baseurl }}/coding-standards/code-standard-javascript.html)
*  [Responsive web design]({{ page.baseurl }}/frontend-dev-guide/responsive-web-design/rwd_overview.html)
*  [Translations]({{ page.baseurl }}/frontend-dev-guide/translations/xlate.html)

